@@ -1,3 +1,10 @@
+2006-02-23  Anthony Balkissoon  <abalkiss@redhat.com>
+
+	* java/math/BigDecimal.java:
+	(toString): Rewrote this method to behave as specified.  Added API
+	comments to explain behaviour.
+	(scaleByPowerOfTen): New method.
+
 2006-02-22  Anthony Balkissoon  <abalkiss@redhat.com>
 
 	* java/math/BigDecimal.java:
